--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
     {medici, ".*", {git, "git://github.com/evanmiller/medici.git", {branch, "rebarify"}}},
     {mongodb, ".*", {git, "git://github.com/evanmiller/mongodb-erlang.git",   {tag, "ce9bf77902"}}},
     {mysql, ".*", {git, "git://github.com/dizzyd/erlang-mysql-driver.git", {tag, "16cae84b5e"}}},
-    {erloci, ".*", {git, "git://github.com/k2informatics/erloci.git", {"master"}}},
+    {erloci, ".*", {git, "git://github.com/k2informatics/erloci.git", "master"}},
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.0.0"}}},
     {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
     {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}},
